overall refactoring
