# api/openapi.yaml
@@ -18,7 +18,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Quote'
+                $ref: '#/components/schemas/CreateQuoteResponse'
         "400":
           description: Bad Request
           content:
@@ -27,7 +27,7 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
 components:
   schemas:
-    Quote:
+    BaseQuote:
       type: object
       required:
         - text
@@ -40,18 +40,25 @@ components:
         author_id:
           type: string
           format: uuid
+          minLength: 36
+          maxLength: 36
           example: 4357ac30-5cb3-48d3-8f97-456187004d8b
     CreateQuoteRequest:
       allOf:
-        - $ref: '#/components/schemas/Quote'
+        - $ref: '#/components/schemas/BaseQuote'
+    CreateQuoteResponse:
+      allOf:
+        - $ref: '#/components/schemas/BaseQuote'
         - type: object
-          required:
-            - creator_id
           properties:
             creator_id:
               type: string
               format: uuid
+              minLength: 36
+              maxLength: 36
               example: 4357ac30-5cb3-48d3-8f97-456187004d8b
+          required:
+            - creator_id
     Detail:
       type: object
       properties:
